--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,80 +21,70 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: 🛠 Install dtc for Devicetree Validation
+      - name: 🛠 Install Devicetree Compiler
         run: |
-          apt-get update
-          apt-get install -y device-tree-compiler
+          sudo apt-get update
+          sudo apt-get install -y device-tree-compiler
 
-      - name: 🚀 Setup ZMK Workspace
+      - name: 🚀 West Setup
         shell: bash
         run: |
-          set -e
           ZMK_REVISION="v0.3"
           ZMK_CLONE_DIR="$GITHUB_WORKSPACE/app_clone"
           ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
           CUSTOM_CONFIG_DIR="$GITHUB_WORKSPACE/config"
           BOARD_NAME="nice_nano_v2"
 
-          # Clone ZMK
+          # Clone ZMK and initialize workspace
           git clone --branch "$ZMK_REVISION" https://github.com/zmkfirmware/zmk.git "$ZMK_CLONE_DIR"
-
-          # Initialize west workspace
           mkdir -p "$ZMK_ROOT"
-          west init -m "$ZMK_CLONE_DIR" --mf app/west.yml "$ZMK_ROOT"
+          west init -m "$ZMK_CLONE_DIR" --mr "$ZMK_REVISION" --mf app/west.yml "$ZMK_ROOT"
           cd "$ZMK_ROOT"
           west update
-
-          # Copy app and configuration files
           mkdir -p "$ZMK_ROOT/app"
+
+          # Copy app files, overlay, and keymap
           cp -r "$ZMK_CLONE_DIR/app/"* "$ZMK_ROOT/app"
           cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.overlay" "$ZMK_ROOT/app/$BOARD_NAME.overlay"
           cp "$CUSTOM_CONFIG_DIR/$BOARD_NAME.keymap" "$ZMK_ROOT/app/$BOARD_NAME.keymap"
 
-          - name: 📝 Dump Overlay Contents
-          shell: bash
-          run: |
+      - name: 📝 Dump Overlay Contents
+        shell: bash
+        run: |
           ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
           BOARD_NAME="nice_nano_v2"
           OVERLAY_PATH="$ZMK_ROOT/app/$BOARD_NAME.overlay"
 
           if [ -f "$OVERLAY_PATH" ]; then
-          echo "--- $BOARD_NAME.overlay ---"
-          cat -n "$OVERLAY_PATH"
-          echo "----------------------------------"
+            echo "--- $BOARD_NAME.overlay ---"
+            cat -n "$OVERLAY_PATH"
+            echo "----------------------------------"
           else
-          echo "❌ Overlay file not found: $OVERLAY_PATH"
-          exit 1
+            echo "❌ Overlay file not found: $OVERLAY_PATH"
+            exit 1
           fi
+
+      - name: ⚡ Source Zephyr Environment
+        shell: bash
+        run: |
+          ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
+          source "$ZMK_ROOT/zephyr/zephyr-env.sh"
 
       - name: 🔍 Validate Devicetree
         shell: bash
         run: |
-          DTS_OVERLAY="$ZMK_ROOT/app/$BOARD_NAME.overlay"
-          TEMP_DTS="$ZMK_ROOT/build/zephyr/temp_overlay.dts"
-          mkdir -p "$(dirname "$TEMP_DTS")"
-
-          # Preprocess overlay for validation
-          dtc -I dts -O dts -o "$TEMP_DTS" "$DTS_OVERLAY" || echo "❌ Overlay failed devicetree compilation"
-
-      - name: 🚀 Build ZMK Firmware
-        shell: bash
-        id: build_run
-        run: |
-          set -e
           ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
           BOARD_NAME="nice_nano_v2"
-          west build -b "$BOARD_NAME" "$ZMK_ROOT/app"
+          OVERLAY_PATH="$ZMK_ROOT/app/$BOARD_NAME.overlay"
+          DTS_TMP="$ZMK_ROOT/build/zephyr/zephyr.dts.tmp"
 
-      - name: 💾 Upload Build Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: zmk-firmware
-          path: ${{ github.workspace }}/zmk_workspace/build/zephyr/zmk.uf2
+          mkdir -p "$ZMK_ROOT/build/zephyr"
+          dtc -I dts -O dtb "$OVERLAY_PATH" -o "$DTS_TMP" && echo "✅ Overlay devicetree valid." || echo "❌ Overlay devicetree compilation failed."
 
-      - name: 💾 Upload Devicetree Logs (Optional)
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: devicetree-debug-logs
-          path: ${{ github.workspace }}/zmk_workspace/build/zephyr/temp_overlay.dts
+      - name: 🚧 Build ZMK Firmware
+        shell: bash
+        run: |
+          ZMK_ROOT="$GITHUB_WORKSPACE/zmk_workspace"
+          BOARD_NAME="nice_nano_v2"
+          cd "$ZMK_ROOT"
+          west build -b "$BOARD_NAME" app
